# cryptopals

./: Cargo.toml  README.md
hackhmac/: Cargo.toml
hackhmac/src/: main.rs
lib/: Cargo.toml
lib/src/: common.rs  dh.rs  echobot.rs  lib.rs  mac.rs  padding.rs  prng.rs  xorcipher.rs
lib/src/aes/: attacks.rs  blockmode.rs  mod.rs  oracles.rs  streammode.rs
vuln/: Cargo.toml
vuln/src/: main.rs
