[package]
name = "lib"
version = "0.1.0"
authors = ["Jean Casademont <jean.casademont@gmail.com>"]

[dependencies]
base64 = "0.9.0"
hex = "0.3.1"
rust-crypto = "^0.2"
rand = "0.5"
sha-1 = "0.7"
md4 = "0.7"

[patch.crates-io]
sha-1 = { path = "third_party/hashes/sha1" }
md4 = { path = "third_party/hashes/md4" }
